--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 </div>
             </div>
         </nav>
-
-
-        </div>
+        
     </header>
+    <div id="overlay">
+
+    </div>
     <main class="content-container" id="main-content">
     </main>
 </body>
